basic 和 delay 例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".basictransition.BasicTransitions"></activity>
+        <activity android:name=".basictransition.DelayTransitions"></activity>
     </application>
 
 </manifest>
