--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".basictransition.BasicTransitions"></activity>
-        <activity android:name=".basictransition.DelayTransitions"></activity>
-        <activity android:name=".basictransition.CustomTransition"></activity>
+        <activity android:name=".basictransition.BasicTransitions" />
+        <activity android:name=".basictransition.DelayTransitions" />
+        <activity android:name=".basictransition.CustomTransition" />
+        <activity
+            android:name=".basictransition.ViewOverlayActivity"
+            android:label="@string/title_activity_view_overlay"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
